<resources>
    <string name="app_name">CoviPedidos</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descripcion_img_foto">Imagen Del Producto</string>
    <string name="descripcionAdd">Crear Producto</string>
    <string name="pedidos_label">Pedidos</string>
    <string name="productos_label">Productos:</string>
    <string-array name="rubros">
        <item>Despensa</item>
        <item>Ferretería</item>
        <item>Heladería</item>
        <item>Mercería</item>
        <item>Verdulería</item>
        <item>Rotisería</item>
    </string-array>
    <string name="direccion_label">Dirección:</string>
    <string-array name="categorias">
        <item>Morfi</item>
        <item>Herramientas</item>
        <item>Hilo</item>
        <item>Helados</item>
    </string-array>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Cerrar</string>
    <string name="alta_producto">Agregar Producto</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="filtrar">Filtrar:</string>
    <string name="product_name_filter_label">Filtrar por Nombre:</string>
    <string name="bienvenida_label">¡Bienvenid@!</string>
    <string name="nueva_tienda_label">Nueva Tienda</string>
    <string name="cargar_productos_label">Cargar Productos</string>
    <string name="menu_productos_label">Productos</string>
    <string name="cerrar_sesion_btn_label">Cerrar Sesión</string>
    <string name="listado_pedidos_label">Pedidos</string>
    <string name="android_sdk_places_apt_key">AIzaSyDL8Sb0TsKkJ_ArCtQFUX1IL7z_ZdiFdUo</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_orders">Pedidos</string>
    <string name="menu_products">Productos</string>
    <string name="menu_slideshow">Productos</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="hint_nombre_producto">Nombre</string>
    <string name="hint_cantidad_disponible">Cantidad Disponible</string>
    <string name="hint_precio">Precio</string>
    <string name="label_tienda_new">Nueva Tienda</string>
    <string name="label_tienda">Tienda</string>
    <string name="label_nombre">Nombre</string>
    <string name="label_rubro">Rubro</string>
    <string name="label_hora_de_inicio">Hora de Inicio</string>
    <string name="label_hora_de_cierre">Hora de Cierre</string>
    <string name="label_metodos_de_pago">Métodos de pago</string>
    <string name="label_efectivo">Efectivo</string>
    <string name="label_tarjeta_de_debito">Tarjeta de débito</string>
    <string name="label_tarjeta_de_credito">Tarjeta de crédito</string>
    <string name="label_debito">Débito</string>
    <string name="label_credito">Crédito</string>
    <string name="label_aceptar">Aceptar</string>
    <string name="label_covi_pedidos">Covi-Pedidos</string>
    <string name="label_horarios">Horarios</string>
    <string name="label_cancelar">Cancelar</string>
    <string name="menu_store">Tienda</string>
    <string name="label_producto_nuevo">Producto Nuevo</string>
    <string name="hint_descripcion_del_producto">Descripcion del producto</string>
    <string name="hint_precio_numero">Precio unitario del producto (Ej: 100.00)</string>
    <string name="hint_stock">Cantidad disponible (Ej: 10)</string>
    <string name="label_informacion_nutricional">Información Nutricional</string>
    <string name="label_foto">Foto</string>
    <string name="label_exceso_de_azucares">Exceso de Azúcares</string>
    <string name="label_exceso_de_sodio">Exceso de Sodio</string>
    <string name="label_exceso_de_grasas_saturadas">Exceso de Grasas Saturadas</string>
    <string name="label_exceso_de_grasas_totales">Exceso de Grasas Totales</string>
    <string name="label_exceso_de_calor_as">Exceso de Calorías</string>
    <string name="label_crear">Crear</string>
    <string name="hint_imagen_del_producto">Imagen del Producto</string>
    <string name="label_sacar_foto">Sacar Foto</string>
    <string name="label_subir_foto">Subir Foto</string>
    <string name="label_informaci_n_b_sica">Información básica</string>
    <string name="covi_pedidos">Covi-Pedidos</string>
    <string name="email">Email</string>
    <string name="email_icon">Email Icon</string>
    <string name="clave">Clave</string>
    <string name="clave_icon">Clave icon</string>
    <string name="registrarse">Registrarse</string>
    <string name="volver">Volver</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="olvido_la_contrase_a">Olvido la contraseña?</string>
    <string name="aun_no_esta_registrado">Aun no esta registrado?</string>
    <string name="label_nueva_tienda">Nueva Tienda</string>
    <string name="horarios_label">Horarios</string>
    <string name="informacion_basica_label">Información Básica</string>
    <string name="buscar_pedido">Búsqueda:</string>
    <string name="busqueda">Busqueda</string>
    <string name="buscar_un_producto">Nombre:</string>
    <string name="label_guardar">Guardar</string>
    <string name="label_informaci_n_nutricional">Información Nutricional</string>
    <string name="label_imagen_producto">Imagen Producto</string>
    <string name="label_crear_producto">Crear Producto</string>
</resources>