<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_store" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_menu_set_as"
            android:title="@string/menu_logout" />
    </group>
</menu>